gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/objc_class3.d
version https://git-lfs.github.com/spec/v1
oid sha256:c6d453b636b1bc4be9ba6ab264bce28a81166b55325eb2a1cca34c40e60f5091
size 484
